Add the exec-maven-plugin plugin and arrange its build lifecycle