@@ -15,8 +15,12 @@
 	<maven-dependency-plugin.version>3.1.2</maven-dependency-plugin.version>
 	<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
 	<maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
+	<exec-maven-plugin.version>3.0.0</exec-maven-plugin.version>
 
 	<ate.version>0.0.0</ate.version>
+
+	<!-- An empty value implies testing of all classes. -->
+	<ate.some></ate.some>
     </properties>
 
     <dependencies>
@@ -60,7 +64,7 @@
 		    <compilerArgs>
 			<arg>-g</arg>
 			<!-- JLS-11, $5.1.1. -->
-			<arg>-Xlint:all,-cast</arg>
+			<arg>-Xlint:all,-cast,-exports</arg>
 			<arg>-Xdiags:verbose</arg>
 		    </compilerArgs>
 		</configuration>
@@ -72,6 +76,51 @@
 		<version>${maven-surefire-plugin.version}</version>
 		<configuration>
 		    <skip>true</skip>
+		</configuration>
+	    </plugin>
+
+	    <!--
+		Only execute prefix-matching test methods of a class:
+		mvn -e dependency:properties exec:exec -Date.some=.\*ArabicRomanConverterTests@testToRoman
+
+		Skip testing:
+		mvn -e clean package -Dexec.skip=true
+	    -->
+	    <plugin>
+		<groupId>org.codehaus.mojo</groupId>
+		<artifactId>exec-maven-plugin</artifactId>
+		<version>${exec-maven-plugin.version}</version>
+		<executions>
+		    <execution>
+			<id>default-test</id>
+			<phase>test</phase>
+			<goals>
+			    <goal>exec</goal>
+			</goals>
+		    </execution>
+		</executions>
+		<configuration>
+		    <classpathScope>test</classpathScope>
+		    <executable>/usr/bin/java</executable>
+		    <fork>true</fork>
+		    <!--
+			With a single src/main/java/module-info.java, use:
+
+			++module-path target/classes:/path/to/ate.jar
+			++patch-module org.zzzyxwvut.numerics.converter=target/test-classes
+
+			With two src/{main,test}/java/module-info.java, use:
+
+			++module-path target/test-classes:/path/to/ate.jar
+		    -->
+		    <!--
+			See java.lang.invoke.MethodHandles#privateLookupIn(Class, MethodHandles.Lookup)
+		    -->
+		    <commandlineArgs>
+			-XX:+UnlockExperimentalVMOptions -XX:+UseEpsilonGC -XX:+AlwaysPreTouch -Xms40m -Xmx40m -Xlog:heap*=info,gc=info -Date.some=${ate.some} --add-reads org.zzzyxwvut.ate=org.zzzyxwvut.numerics.converter --add-modules org.zzzyxwvut.ate --module-path target${file.separator}classes${path.separator}${org.zzzyxwvut:ate:jar} --patch-module org.zzzyxwvut.numerics.converter=target${file.separator}test-classes --module org.zzzyxwvut.numerics.converter/org.zzzyxwvut.numerics.converter.internal.NumericConverterTester
+		    </commandlineArgs>
+		    <timeout>16000</timeout>
+		    <workingDirectory>${basedir}</workingDirectory>
 		</configuration>
 	    </plugin>
 	</plugins>
